update-manager (1:0.59.5) feisty; urgency=low

  * UpdateManager/fakegconf.py:
    - fix missing {get,set}_string() in fakegconf

 --

update-manager (1:0.59.4) feisty; urgency=low

  * data/glade/UpdateManager.glade:
    - improve the wording of the dist-upgrade required dialog (LP#88706)
  * update-manager:
    - set better dialog caption (LP#88706)
  * DistUpgrade/DistUpgradeControler.py:
    - supress reboot notification when a upgrade is in progress (LP#91999)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 13 Mar 2007 22:11:11 +0100

update-manager (1:0.59.3) feisty; urgency=low

  * DistUpgrade/DistUpgradeViewKDE.py:
    - Fix incorrect variable name, LP No 91887

 -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 13 Mar 2007 20:05:22 +0000

update-manager (1:0.59.2) feisty; urgency=low

  * DistUpgrade/DistUpgradeViewKDE.py:
    - Fix reference to konsole_frame (LP No 84717 comment 33)

 -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 13 Mar 2007 11:12:01 +0000

update-manager (1:0.59.1) feisty; urgency=low

  [ Michael Vogt ]
  * DistUpgrade/DistUpgradeViewGtk.py:
    - do not fail if loading the svg pixbuf loader fails (LP#91593)

  [ Jonathan Riddell ]
  * DistUpgrade/DistUpgradeViewKDE.py:
    - import KRun, closes https://launchpad.net/bugs/91072
    - fix non-existant variable use, closes https://launchpad.net/bugs/91386
    - fix incorrect method name, closes https://launchpad.net/bugs/91295

 -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 12 Mar 2007 19:00:07 +0000

update-manager (1:0.59) feisty; urgency=low

  * DistUpgrade/DistUpgradeViewKDE.py
    - quit any running instances of Adept
  * DistUpgrade/dist-upgrade.py
    - improve error message when failing to load frontend

 -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 12 Mar 2007 13:08:07 +0000

update-manager (1:0.58) feisty; urgency=low

  * UpdateManager/UpdateManager.py:
    - do not crash if download size can not be calculated (LP#90547)