@@ -1,9 +1,18 @@
 update-manager (1:0.59.5) feisty; urgency=low
 
   * UpdateManager/fakegconf.py:
-    - fix missing {get,set}_string() in fakegconf
+    - Fix missing {get,set}_string() in fakegconf
+  * DistUpgrade/dialog_changes.ui
+    - Fix alignment of image
+  * DistUpgrade/dialog_error.ui
+    - Fix caption
+    - Make text box read only
+  * DistUpgrade/DistUpgradeViewKDE.py
+    - remove unused argument to reportBug()
+    - fix caption of information box
+    - show close button on error box
 
- --
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Wed, 14 Mar 2007 11:05:22 +0000
 
 update-manager (1:0.59.4) feisty; urgency=low
 
